# cube-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/cube_cli/: __init__.py  _version.py  command.py  cube_json.py  main.py  print.py  repl.py  repl_state.py  save_load.py
src/rubik_cli/: __init__.py  main.py  print.py
tests/: __init__.py  test_command.py  test_cube_json.py  test_main.py  test_print.py  test_repl.py  test_repl_state.py  test_save_load.py
