[tool.poetry]
name = "cube-cli"
version = "0.1.0"
description = "A CLI application for interacting with cube_model"
authors = []
readme = "README.md"
packages = [{include = "cube_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
cube-model = "^1.0.4"

[tool.poetry.scripts]
cube = "cube_cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
